--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,379 +8,161 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.22.20.108
-    port: 8880
+    server: 172.67.161.21
+    port: 2095
     cipher: auto
-    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer01
+      path: /hgcefomn
       headers:
-        host: ecc.vtcss.top
+        host: amszx.66666654.xyz
   - &id002
-    name: 🇺🇸_US_美国_2
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
     type: vmess
-    server: 172.64.96.134
-    port: 80
-    cipher: aes-128-gcm
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp1.scproxy.top
-  - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 7p3h04.abzoones.xyz
-    port: 36801
+    server: 8u9a04.abzoones.xyz
+    port: 36871
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ph04.abpilot.xyz
+    servername: ua04.abpilot.xyz
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国_1
+    type: vmess
+    server: 8h2k06.abzoones.xyz
+    port: 36611
+    cipher: auto
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk06.abpilot.xyz
     network: tcp
   - &id004
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
     type: vmess
-    server: 8h2k04.abzoones.xyz
-    port: 36601
+    server: 1j8p05.abzoones.xyz
+    port: 36106
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk04.abpilot.xyz
+    servername: jp05.abpilot.xyz
     network: tcp
   - &id005
-    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
+    name: 🇨🇳_CN_中国->🇲🇾_MY_马来西亚
     type: vmess
-    server: 4p2t01.abzoones.xyz
-    port: 36881
+    server: 8m6y01.abzoones.xyz
+    port: 36887
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: pt04.abpilot.xyz
+    servername: my04.abpilot.xyz
     network: tcp
   - &id006
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 9s5g04.abzoones.xyz
-    port: 36201
+    server: 3u1s06.abzoones.xyz
+    port: 36511
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg04.abpilot.xyz
+    servername: us06.abpilot.xyz
     network: tcp
   - &id007
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg05.abpilot.xyz
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 2n8l04.abzoones.xyz
-    port: 36901
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: nl04.abpilot.xyz
-    network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 1j8p04.abzoones.xyz
-    port: 36116
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.abpilot.xyz
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
-    type: vmess
-    server: 3v4n04.abzoones.xyz
-    port: 36874
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: vn04.abpilot.xyz
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
-    type: vmess
-    server: 172.64.106.104
-    port: 2095
-    cipher: auto
-    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /hgcefomn
-      headers:
-        host: amszx.66666654.xyz
-  - &id013
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 2u3k04.abzoones.xyz
-    port: 36811
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.abpilot.xyz
-    network: tcp
-  - &id014
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 3u1s05.abzoones.xyz
-    port: 36506
+    server: 3u1s04.abzoones.xyz
+    port: 36501
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: us05.abpilot.xyz
+    servername: us04.abpilot.xyz
     network: tcp
-  - &id015
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+  - &id008
+    name: 🇨🇳_CN_中国->🇪🇸_ES_西班牙
     type: vmess
-    server: 8h2k05.abzoones.xyz
-    port: 36606
+    server: 6e2s04.abzoones.xyz
+    port: 36884
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk05.abpilot.xyz
+    servername: es04.abpilot.xyz
     network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+  - &id009
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
     type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
+    server: 8t6w05.abzoones.xyz
+    port: 36306
     cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ca04.abpilot.xyz
+    servername: tw05.abpilot.xyz
     network: tcp
-  - &id017
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+  - &id010
+    name: 🇨🇾_CY_塞浦路斯->🇳🇱_NL_荷兰
     type: vmess
-    server: 6i2r04.abzoones.xyz
-    port: 36877
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.abpilot.xyz
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: 8t6w04.abzoones.xyz
-    port: 36301
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw04.abpilot.xyz
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.abpilot.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
-    type: vmess
-    server: 8k2r04.abzoones.xyz
-    port: 36401
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.abpilot.xyz
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 8r5u04.abzoones.xyz
-    port: 36851
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ru04.abpilot.xyz
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 9a8r04.abzoones.xyz
-    port: 36861
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ar04.abpilot.xyz
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 1t8h04.abzoones.xyz
-    port: 36904
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: th04.abpilot.xyz
-    network: tcp
-  - &id024
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: vmess
-    server: 1j8p06.abzoones.xyz
-    port: 36111
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.abpilot.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
-    type: vmess
-    server: 9s5g06.abzoones.xyz
-    port: 36211
-    cipher: auto
-    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.abpilot.xyz
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: bluehost.com
+    server: mci.saintink.eu.org
     port: 443
     cipher: auto
-    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
+    uuid: c226d9fa-b5a7-4f6e-9532-50137c89311d
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /16575
+      path: nl1.v2rayserv.com/vmess
       headers:
-        host: cdnca1.digisport.shop
-  - &id027
-    name: 🇺🇸_US_美国_4
+        host: 4.saintink.eu.org
+  - &id011
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
     type: vmess
-    server: 141.101.114.249
-    port: 8880
+    server: 2t1u04.abzoones.xyz
+    port: 36868
     cipher: auto
-    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id028
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: amszxc.66666654.xyz
-    port: 2095
-    cipher: auto
-    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /hgcefomn
-      headers:
-        host: amszx.66666654.xyz
-  - &id029
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 103.184.45.160
-    port: 443
-    cipher: auto
-    uuid: 62433eb1-131f-4d3c-877c-192914a2d45c
+    uuid: bdc2f902-209b-4978-aa26-dd956f42f0b7
     alterId: 0
     tls: true
     skip-cert-verify: true
+    servername: tr04.abpilot.xyz
+    network: tcp
+  - &id012
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.26.239.163
+    port: 18420
+    cipher: auto
+    uuid: 65578c09-f23e-49cc-abee-4ad2a1850f9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer
-      headers:
-        host: uxx.vtcss.top
-  - &id030
-    name: 🇺🇸_US_美国_5
+      path: /
+  - &id013
+    name: 🇨🇷_CR_哥斯达黎加
     type: vmess
-    server: 104.25.196.249
-    port: 8880
+    server: 190.93.246.37
+    port: 8080
     cipher: auto
-    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -389,55 +171,25 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id031
-    name: 🇳🇱_NL_荷兰
+  - &id014
+    name: 🇭🇰_HK_香港_1
     type: vmess
-    server: 188.114.97.90
-    port: 8880
-    cipher: auto
-    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id032
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 172.67.10.121
+    server: 154.92.9.69
     port: 80
     cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /shirker
+      path: /blue
       headers:
-        host: uk2.scproxy.top
-  - &id033
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+        host: ecc.vtcss.top
+  - &id015
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.18.29.109
-    port: 443
-    cipher: auto
-    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /16575
-      headers:
-        host: cdnca1.digisport.shop
-  - &id034
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 172.67.163.143
+    server: 104.24.220.52
     port: 8880
     cipher: auto
     uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
@@ -449,18 +201,53 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id035
-    name: 🇸🇬_SG_新加坡
-    type: trojan
-    server: pqawssg1.aiopen.cfd
-    port: 443
-    udp: true
-    password: f0366e33-84c9-4a20-ad40-4f1e2c230c36
-    sni: 18-140-66-207.nhost.00cdn.com
+  - &id016
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.25.72.227
+    port: 8080
+    cipher: auto
+    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇺🇸_US_美国_7
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id017
+    name: 🇨🇳_CN_中国_2
+    type: vmess
+    server: 103.184.45.40
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id018
+    name: 🇭🇰_HK_香港_2
+    type: vmess
+    server: 154.92.9.176
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id019
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 104.24.181.242
     port: 8080
@@ -474,6 +261,190 @@ proxies:
       path: /qwer
       headers:
         host: uxx.vtcss.top
+  - &id020
+    name: 🇭🇰_HK_香港_3
+    type: vmess
+    server: 154.92.9.94
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id021
+    name: 🇭🇰_HK_香港_4
+    type: vmess
+    server: 154.92.9.86
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id022
+    name: 🇭🇰_HK_香港_5
+    type: vmess
+    server: 154.92.9.163
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id023
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 198.41.222.153
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id024
+    name: 🇭🇰_HK_香港_6
+    type: vmess
+    server: 154.92.9.80
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id025
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.17.185.81
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id026
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.20.73.240
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id027
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 172.67.154.35
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id028
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 162.159.241.157
+    port: 8080
+    cipher: auto
+    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id029
+    name: 🇫🇷_FR_法国->🇩🇪_DE_德国
+    type: ss
+    server: 54.36.115.241
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id030
+    name: 🇫🇷_FR_法国->🇳🇴_NO_挪威
+    type: ss
+    server: 135.125.244.103
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id031
+    name: 🇫🇷_FR_法国
+    type: ssr
+    server: fr-am1-5.eqsunshine.com
+    port: 8181
+    password: RcfVcDzzB
+    cipher: aes-256-cfb
+    obfs: tls1.2_ticket_auth
+    protocol: origin
+  - &id032
+    name: 🇸🇬_SG_新加坡
+    type: vmess
+    server: 118.107.46.173
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/080712342310
+  - &id033
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 23.108.100.101
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /footers
 proxy-groups:
   - name: PROXY
     type: select
@@ -533,9 +504,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -574,9 +542,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -613,9 +578,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
