--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,206 +6,70 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇫🇷_FR_法国_1
+    name: 🇨🇳_CN_中国->🇲🇾_MY_马来西亚
     type: vmess
-    server: 173.245.49.96
-    port: 8080
+    server: 8m6y01.abzoones.xyz
+    port: 36887
     cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    uuid: 527f2f1e-c55c-4c36-b82c-1fb70843c063
     alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.24.13.137
-    port: 8080
-    cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id003
-    name: 🇦🇫_AF_阿富汗
-    type: ss
-    server: 121.127.46.147
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇰🇷_KR_韩国
-    type: ss
-    server: 43.202.49.222
-    port: 2333
-    password: doub.io
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇸🇬_SG_新加坡
-    type: ss
-    server: 13.212.239.81
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 162.159.46.222
-    port: 8080
-    cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id007
-    name: 🇫🇷_FR_法国_2
-    type: trojan
-    server: 57.128.173.6
-    port: 443
-    udp: true
-    password: 29f2cf65-f0ee-4a08-83f3-df1beb74d55d
-    sni: www.speedtest.net
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇰🇷_KR_韩国->🇸🇬_SG_新加坡
-    type: vmess
-    server: 138.2.125.236
-    port: 80
-    cipher: auto
-    uuid: 2075f10a-e78c-4873-dac3-b24886df2682
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@hkaa0
-      headers:
-        host: sg.wyhkaa0.cf
-  - &id009
-    name: 🇩🇪_DE_德国->🇸🇬_SG_新加坡
-    type: vmess
-    server: 8.211.2.67
-    port: 80
-    cipher: auto
-    uuid: 2075f10a-e78c-4873-dac3-b24886df2682
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@hkaa0
-      headers:
-        host: sg.wyhkaa0.cf
-  - &id010
-    name: 🇨🇭_CH_瑞士->🇸🇬_SG_新加坡
-    type: vmess
-    server: 64.110.91.92
-    port: 80
-    cipher: auto
-    uuid: 2075f10a-e78c-4873-dac3-b24886df2682
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@hkaa0
-      headers:
-        host: sg.wyhkaa0.cf
-  - &id011
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: qzcn2-01.dajuzi.cc
-    port: 15598
-    cipher: auto
-    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 103.184.44.138
-    port: 80
-    cipher: auto
-    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: ecc.vtcss.top
-  - &id013
-    name: 🇭🇰_HK_香港_1
-    type: vmess
-    server: 154.92.9.107
-    port: 80
-    cipher: auto
-    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: ecc.vtcss.top
-  - &id014
-    name: 🇭🇰_HK_香港_2
-    type: vmess
-    server: 154.92.9.189
-    port: 80
-    cipher: auto
-    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: ecc.vtcss.top
-  - &id015
-    name: 🇯🇵_JP_日本_1
-    type: ss
-    server: 54.199.83.239
-    port: 2333
-    password: doub.io
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 23.108.100.101
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
     tls: true
     skip-cert-verify: true
+    servername: my04.abpilot.xyz
+    network: tcp
+  - &id002
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
+    type: vmess
+    server: 1j8p06.abzoones.xyz
+    port: 36111
+    cipher: auto
+    uuid: 527f2f1e-c55c-4c36-b82c-1fb70843c063
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp06.abpilot.xyz
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    type: vmess
+    server: 8t6w04.abzoones.xyz
+    port: 36301
+    cipher: auto
+    uuid: 527f2f1e-c55c-4c36-b82c-1fb70843c063
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tw04.abpilot.xyz
+    network: tcp
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 108.162.196.108
+    port: 2082
+    cipher: auto
+    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /footers
+      path: /blue
       headers:
-        host: www.40587333.xyz
-  - &id017
-    name: 🇺🇸_US_美国_4
+        host: ecc.vtcss.top
+  - &id005
+    name: 🇨🇳_CN_中国->🇪🇸_ES_西班牙
+    type: vmess
+    server: 6e2s04.abzoones.xyz
+    port: 36884
+    cipher: auto
+    uuid: 527f2f1e-c55c-4c36-b82c-1fb70843c063
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: es04.abpilot.xyz
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: 104.27.48.116
     port: 8080
@@ -219,19 +83,154 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id018
-    name: 🇹🇼_TW_台湾_1
+  - &id007
+    name: 🇳🇱_NL_荷兰
     type: vmess
-    server: tw99-hinet.mynodes001.one
-    port: 554
+    server: 188.114.97.96
+    port: 8880
     cipher: auto
-    uuid: 20e8b580-3c11-3017-a840-eb624b483324
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id008
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.24.242.157
+    port: 2082
+    cipher: auto
+    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 158.101.7.8
+    port: 80
+    cipher: auto
+    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id010
+    name: 🇨🇷_CR_哥斯达黎加
+    type: vmess
+    server: 190.93.246.37
+    port: 8080
+    cipher: auto
+    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id011
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.24.77.46
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id012
+    name: 🇨🇳_CN_中国_1
+    type: vmess
+    server: 103.184.44.224
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 108.162.195.108
+    port: 2052
+    cipher: auto
+    uuid: 50c6f498-9c49-49b4-b87c-fda69d822e5c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: uxx.vtcss.top
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.24.220.52
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 141.101.114.249
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id016
+    name: 🇭🇰_HK_香港_1
+    type: vmess
+    server: 218.255.149.45
+    port: 80
+    cipher: auto
+    uuid: 4a75c3ba-f2e9-11ed-bf1b-f23c91369f2d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id017
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: 172.64.106.104
     port: 2095
@@ -245,7 +244,67 @@ proxies:
       path: /hgcefomn
       headers:
         host: amszx.66666654.xyz
+  - &id018
+    name: 🇭🇰_HK_香港_2
+    type: vmess
+    server: 154.92.9.228
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 141.101.120.153
+    port: 2052
+    cipher: auto
+    uuid: 50c6f498-9c49-49b4-b87c-fda69d822e5c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: uxx.vtcss.top
   - &id020
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 104.27.69.12
+    port: 2082
+    cipher: auto
+    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id021
+    name: 🇨🇳_CN_中国_2
+    type: vmess
+    server: 103.184.45.7
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: ecc.vtcss.top
+  - &id022
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
     server: 104.31.16.46
@@ -260,10 +319,25 @@ proxies:
       path: /IOebhLMhl1CTbFHbL95myfRX2
       headers:
         host: ca5.tehme100.fun
-  - &id021
-    name: 🇺🇸_US_美国_5
+  - &id023
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: 198.41.197.118
+    server: 104.24.38.239
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id024
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 198.41.218.144
     port: 8080
     cipher: auto
     uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
@@ -275,8 +349,8 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id022
-    name: 🇺🇸_US_美国_6
+  - &id025
+    name: 🇺🇸_US_美国_14
     type: vmess
     server: 104.21.7.156
     port: 8080
@@ -290,24 +364,13 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id023
-    name: 🇯🇵_JP_日本_2
+  - &id026
+    name: 🇭🇰_HK_香港_3
     type: vmess
-    server: 141.147.153.244
-    port: 41545
+    server: 154.92.9.150
+    port: 80
     cipher: auto
-    uuid: d47d7135-0954-46ab-a190-17b6c8630a85
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 173.245.58.43
-    port: 2082
-    cipher: auto
-    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -316,66 +379,48 @@ proxies:
       path: /blue
       headers:
         host: ecc.vtcss.top
-  - &id025
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.16.208.242
-    port: 8080
-    cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id026
-    name: 🇹🇼_TW_台湾_2
-    type: vmess
-    server: tw98-1g-hinet.mytls888.com
-    port: 554
-    cipher: auto
-    uuid: 20e8b580-3c11-3017-a840-eb624b483324
-    alterId: 0
-    tls: false
+  - &id027
+    name: 🇯🇵_JP_日本_1
+    type: trojan
+    server: jp-csjc.85413.xyz
+    port: 443
+    udp: true
+    password: aba9389e-21b7-45f5-a82d-0c2b8b989bb4
     skip-cert-verify: true
     network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_9
+  - &id028
+    name: 🇸🇬_SG_新加坡_1
+    type: ss
+    server: 13.213.4.142
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇸🇬_SG_新加坡_2
+    type: trojan
+    server: sg-csjc.85413.xyz
+    port: 443
+    udp: true
+    password: aba9389e-21b7-45f5-a82d-0c2b8b989bb4
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
     type: vmess
-    server: shs.shabijichang.com
-    port: 80
+    server: 112.65.27.152
+    port: 36894
     cipher: auto
-    uuid: f0570f9c-d688-4bc0-ab35-0b18de2c115f
+    uuid: 802a493e-5944-4087-9dad-c7568e6f8c75
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: shs.shabijichang.com
-  - &id028
-    name: 🇺🇸_US_美国_10
+  - &id031
+    name: 🇺🇸_US_美国_15
     type: vmess
-    server: 104.25.72.227
-    port: 8080
-    cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id029
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 172.64.194.234
+    server: 198.41.214.55
     port: 2095
     cipher: auto
     uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
@@ -387,10 +432,19 @@ proxies:
       path: /hgcefomn
       headers:
         host: amszx.66666654.xyz
-  - &id030
-    name: 🇺🇸_US_美国_11
+  - &id032
+    name: 🇯🇵_JP_日本_2
+    type: trojan
+    server: jp-csjc.syjd.xyz
+    port: 443
+    udp: true
+    password: 51eebef7-beaa-417b-9584-2794d10377c9
+    skip-cert-verify: true
+    network: tcp
+  - &id033
+    name: 🇺🇸_US_美国_16
     type: vmess
-    server: 104.21.239.41
+    server: 104.25.107.206
     port: 2082
     cipher: auto
     uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
@@ -402,64 +456,36 @@ proxies:
       path: /blue
       headers:
         host: ecc.vtcss.top
-  - &id031
-    name: 🇺🇸_US_美国_12
+  - &id034
+    name: 🇺🇸_US_美国_17
     type: vmess
-    server: 141.101.123.18
+    server: 104.24.18.165
     port: 8880
     cipher: auto
-    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer
+      path: /qwer01
       headers:
-        host: uxx.vtcss.top
-  - &id032
-    name: 🇺🇸_US_美国_13
+        host: ecc.vtcss.top
+  - &id035
+    name: 🇺🇸_US_美国_18
     type: vmess
-    server: 170.178.179.189
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/031730091420
-  - &id033
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: ns1.v2-vip.fun
+    server: 104.17.96.132
     port: 8080
     cipher: auto
-    uuid: 44c48fbe-cfbf-40ee-b0e4-12a1cec4da69
+    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /qwer01
       headers:
-        host: ssrsub.v02.ssrsub.com
-  - &id034
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 8080
-    cipher: auto
-    uuid: 44c48fbe-cfbf-40ee-b0e4-12a1cec4da69
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v02.ssrsub.com
+        host: ecc.vtcss.top
 proxy-groups:
   - name: PROXY
     type: select
@@ -520,6 +546,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -559,6 +586,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -596,6 +624,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
