--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,9 +8,9 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 162.159.240.218
+    server: 172.67.227.240
     port: 80
-    cipher: aes-128-gcm
+    cipher: auto
     uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
     alterId: 0
     tls: false
@@ -22,81 +22,6 @@ proxies:
         host: ddp2.1808.cf
   - &id002
     name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.67.221.17
-    port: 80
-    cipher: aes-128-gcm
-    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 4a47e680
-      headers:
-        host: ddp2.1808.cf
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 108.162.196.108
-    port: 2082
-    cipher: auto
-    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: ecc.vtcss.top
-  - &id004
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 162.159.242.18
-    port: 80
-    cipher: aes-128-gcm
-    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 4a47e680
-      headers:
-        host: ddp2.1808.cf
-  - &id005
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: speedip.eu.org
-    port: 8080
-    cipher: auto
-    uuid: 44c48fbe-cfbf-40ee-b0e4-12a1cec4da69
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v01.ssrsub.com
-  - &id006
-    name: 🇨🇦_CA_加拿大->🇫🇷_FR_法国
-    type: vmess
-    server: Shopify.com
-    port: 2086
-    cipher: auto
-    uuid: 250f4331-8c3e-4b87-a86b-5c5fbf9ddba8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /aries
-      headers:
-        host: Fr.cloudflare.quest
-  - &id007
-    name: 🇺🇸_US_美国_6
     type: vmess
     server: cf2.992688.xyz
     port: 8080
@@ -110,27 +35,97 @@ proxies:
       path: /
       headers:
         host: haxus3.vpn66.eu.org
-  - &id008
-    name: 🇺🇸_US_美国_7
+  - &id003
+    name: 🇺🇸_US_美国->🇯🇵_JP_日本
     type: vmess
-    server: 162.159.254.44
-    port: 80
+    server: dbamwvb.76898102.xyz
+    port: 2082
     cipher: auto
-    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
+    uuid: 5f9c7bda-33f9-3dd0-bcf5-aca324418e31
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 4a47e680
+      path: /tadabfw
       headers:
-        host: ddp2.1808.cf
-  - &id009
-    name: 🇺🇸_US_美国_8
+        host: dbamwvb.76898102.xyz
+  - &id004
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    type: trojan
+    server: gzyd02.jcnode.top
+    port: 36403
+    udp: true
+    password: 6fca988d-0fa3-4411-8d9c-64f42971c0db
+    sni: uk01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 162.159.253.25
+    server: 162.159.130.198
     port: 80
     cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.scproxy.top
+  - &id006
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 198.41.223.186
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tot.vtcss.top
+  - &id007
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 172.64.91.102
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tot.vtcss.top
+  - &id008
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: 162.159.254.44
+    port: 2095
+    cipher: auto
+    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /hgcefomn
+      headers:
+        host: amszx.66666654.xyz
+  - &id009
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 162.159.240.218
+    port: 80
+    cipher: aes-128-gcm
     uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
     alterId: 0
     tls: false
@@ -141,9 +136,9 @@ proxies:
       headers:
         host: ddp2.1808.cf
   - &id010
-    name: 🇺🇸_US_美国_9
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 141.101.115.89
+    server: 172.67.8.33
     port: 80
     cipher: auto
     uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
@@ -156,11 +151,11 @@ proxies:
       headers:
         host: ddp2.1808.cf
   - &id011
-    name: 🇺🇸_US_美国_10
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 172.67.197.1
+    server: 172.67.211.43
     port: 80
-    cipher: aes-128-gcm
+    cipher: auto
     uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
     alterId: 0
     tls: false
@@ -171,6 +166,21 @@ proxies:
       headers:
         host: ddp2.1808.cf
   - &id012
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 172.67.10.121
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: uk2.scproxy.top
+  - &id013
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: ns1.v2-vip.fun
@@ -185,25 +195,66 @@ proxies:
       path: /i99LgvSaslbsPLLQQ7j6Z
       headers:
         host: de5.irteh.fun
-  - &id013
-    name: 🇺🇸_US_美国_11
+  - &id014
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
-    server: 172.64.109.54
-    port: 80
-    cipher: aes-128-gcm
-    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
+    server: ns1.v2-vip.fun
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 4a47e680
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
-        host: ddp2.1808.cf
-  - &id014
-    name: 🇺🇸_US_美国_12
+        host: fr7.tehme100.fun
+  - &id015
+    name: 🇩🇪_DE_德国
     type: vmess
-    server: 172.64.172.109
+    server: 116.202.30.76
+    port: 42000
+    cipher: auto
+    uuid: 408438b0-fe40-44de-af19-0e5e6bb750ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 104.31.16.46
+    port: 2082
+    cipher: auto
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca5.tehme100.fun
+  - &id017
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 66.81.247.133
+    port: 443
+    cipher: auto
+    uuid: F591CE71-33F8-4B12-824A-0167FA839ED9
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /speedtest
+      headers:
+        host: Dusseldorf.kotick.site
+  - &id018
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 172.64.193.102
     port: 80
     cipher: auto
     uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
@@ -215,7 +266,119 @@ proxies:
       path: 4a47e680
       headers:
         host: ddp2.1808.cf
-  - &id015
+  - &id019
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 172.64.229.116
+    port: 8880
+    cipher: auto
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /XQ2WCa29jfDMGBcbnQ
+      headers:
+        host: netherlands.yj2022.gq
+  - &id020
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 36.150.27.31
+    port: 80
+    cipher: auto
+    uuid: db8d12d5-1968-4125-b775-77d50aa65923
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id021
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 64.32.20.101
+    port: 40039
+    cipher: auto
+    uuid: c1bad9a6-1482-4941-a0c4-e85f3cbbcb5a
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 104.26.1.6
+    port: 8080
+    cipher: auto
+    uuid: 44c48fbe-cfbf-40ee-b0e4-12a1cec4da69
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v01.ssrsub.com
+  - &id023
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 172.67.3.69
+    port: 80
+    cipher: auto
+    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 4a47e680
+      headers:
+        host: ddp2.1808.cf
+  - &id024
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 162.159.133.233
+    port: 80
+    cipher: auto
+    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 4a47e680
+      headers:
+        host: ddp2.1808.cf
+  - &id025
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 67.21.84.217
+    port: 47088
+    cipher: auto
+    uuid: b9a305a9-1ff2-4ec1-b338-933555833baa
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 108.162.193.175
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tot.vtcss.top
+  - &id027
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: cf1.992688.xyz
@@ -230,25 +393,10 @@ proxies:
       path: /
       headers:
         host: vceu3.vpn66.eu.org
-  - &id016
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+  - &id028
+    name: 🇺🇸_US_美国_18
     type: vmess
-    server: amstd.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 4055dafe-1b9f-4463-b84c-0be67858f117
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: amstd.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 162.159.138.46
+    server: 172.64.164.47
     port: 80
     cipher: auto
     uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
@@ -260,183 +408,43 @@ proxies:
       path: 4a47e680
       headers:
         host: ddp2.1808.cf
-  - &id018
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 104.18.64.251
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /GdtYWlsLmNvbSJ9LCJjb3V
-      headers:
-        host: newyork.yj2022.gq
-  - &id019
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: cf3.992688.xyz
-    port: 8080
-    cipher: auto
-    uuid: f467f4da-2226-448d-a30d-463ef10548ac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: vcus2.vpn66.eu.org
-  - &id020
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: bluehost.com
-    port: 443
-    cipher: auto
-    uuid: 12eed507-9a58-4ca5-f7af-2871e9aae684
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /19544
-      headers:
-        host: cdntr2.digisport.shop
-  - &id021
-    name: 🇯🇵_JP_日本_1
-    type: trojan
-    server: gsawshk2.aiopen.cfd
-    port: 443
-    udp: true
-    password: 17c0c3fe-0e7e-4d75-8011-ebb46fea532b
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇯🇵_JP_日本_2
-    type: trojan
-    server: gsawsjp2.aiopen.cfd
-    port: 443
-    udp: true
-    password: 17c0c3fe-0e7e-4d75-8011-ebb46fea532b
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇯🇵_JP_日本_3
-    type: trojan
-    server: gsawshk1.aiopen.cfd
-    port: 443
-    udp: true
-    password: 17c0c3fe-0e7e-4d75-8011-ebb46fea532b
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇸🇬_SG_新加坡
-    type: trojan
-    server: gsawssg1.aiopen.cfd
-    port: 443
-    udp: true
-    password: 17c0c3fe-0e7e-4d75-8011-ebb46fea532b
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: trojan
-    server: pqawszf.aiopen.cfd
-    port: 35000
-    udp: true
-    password: 17c0c3fe-0e7e-4d75-8011-ebb46fea532b
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: 104.16.238.237
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /GdtYWlsLmNvbSJ9LCJjb3V
-      headers:
-        host: newyork.yj2022.gq
-  - &id027
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: 141.101.115.89
-    port: 2095
-    cipher: auto
-    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /hgcefomn
-      headers:
-        host: amszx.66666654.xyz
-  - &id028
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: cdn.narutos.top
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /GdtYWlsLmNvbSJ9LCJjb3V
-      headers:
-        host: newyork.yj2022.gq
   - &id029
     name: 🇺🇸_US_美国_19
     type: vmess
-    server: 104.27.0.214
-    port: 2082
+    server: cdn.anycast.eu.org
+    port: 80
     cipher: auto
-    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /blue
+      path: 4a47e680
       headers:
-        host: ecc.vtcss.top
+        host: ddp2.1808.cf
   - &id030
     name: 🇺🇸_US_美国_20
     type: vmess
-    server: 104.24.206.115
-    port: 2082
+    server: 172.67.244.14
+    port: 80
     cipher: auto
-    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /blue
+      path: 4a47e680
       headers:
-        host: ecc.vtcss.top
+        host: ddp2.1808.cf
   - &id031
     name: 🇺🇸_US_美国_21
     type: vmess
-    server: 104.27.69.12
+    server: 104.16.181.71
     port: 2082
     cipher: auto
-    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -444,35 +452,7 @@ proxies:
     ws-opts:
       path: /blue
       headers:
-        host: ecc.vtcss.top
-  - &id032
-    name: 🇺🇸_US_美国_22
-    type: vmess
-    server: linkedin.disnet.gq
-    port: 443
-    cipher: auto
-    uuid: a869c557-5c7d-426f-9039-0279c16352bc
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmessws
-      headers:
-        host: linkedin.disnet.gq
-  - &id033
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 123.207.75.74
-    port: 80
-    cipher: auto
-    uuid: e2b73315-2fc1-4e86-8df3-023baf466438
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
+        host: tot.vtcss.top
 proxy-groups:
   - name: PROXY
     type: select
@@ -530,8 +510,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -568,8 +546,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
   - name: SELECT
     type: select
     proxies:
@@ -604,8 +580,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
